<resources>
    <string name="app_name">Premier League</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="vs">VS</string>
    <string name="goals">Goals</string>
    <string name="shots">Shots</string>
    <string name="goalkeeper">Goalkeeper</string>
    <string name="defense">Defense</string>
    <string name="midfield">Midfield</string>
    <string name="forward">Forward</string>
    <string name="lineups">Lineups</string>

    <string name="tanggal">12/04/2018</string>
    <string name="teamhome">Arsenal</string>
    <string name="teamaway">Chelsea</string>
    <string name="score">0</string>

    <string name="favorites">Favorites</string>
</resources>
