<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/LLFavorite"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:paddingTop="15dp"
    android:paddingBottom="15dp"
    android:paddingLeft="15dp"
    android:paddingRight="15dp"
    android:layout_marginTop="10dp"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp"
    android:background="#FFFFFF">

    <TextView
        android:id="@+id/tvTanggalPertandinganFavorit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="3dp"
        android:text="@string/tanggal"
        android:textColor="#500557"
        android:gravity="center_vertical"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="8dp">

        <TextView
            android:id="@+id/tvVersusFavorit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:paddingRight="10dp"
            android:paddingLeft="10dp"
            android:text="@string/vs"/>

        <TextView
            android:id="@+id/tvScoreHomeFavorit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toLeftOf="@+id/tvVersusFavorit"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/score"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvScoreAwayFavorit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/tvVersusFavorit"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/score"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvTeamHomeFavorit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toLeftOf="@+id/tvScoreHomeFavorit"
            android:text="@string/teamhome"
            android:textAlignment="textEnd"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tvTeamAwayFavorit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/tvScoreAwayFavorit"
            android:text="@string/teamaway"
            android:textAlignment="viewStart"
            android:textSize="18sp" />
    </RelativeLayout>
</LinearLayout>


<!--<?xml version="1.0" encoding="utf-8"?>-->
<!--<LinearLayout-->
    <!--xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:orientation="horizontal">-->

    <!--<TextView-->
        <!--android:id="@+id/idnombre"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:paddingRight="10dp"-->
        <!--android:paddingLeft="10dp"/>-->

    <!--<TextView-->
        <!--android:id="@+id/nombre"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:paddingRight="10dp"-->
        <!--android:paddingLeft="10dp"/>-->

<!--</LinearLayout>-->