<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/LLDetailFavorite"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:paddingTop="15dp"
    android:paddingBottom="15dp"
    android:paddingLeft="15dp"
    android:paddingRight="15dp"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp"
    android:background="#FFFFFF">

    <ImageButton
        android:id="@+id/btnFavoriteFavorite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_add_favorite"
        android:layout_gravity="right" />


    <TextView
        android:id="@+id/tvIdEventFavorite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="000000"
        android:textColor="#FFFFFF"/>

    <TextView
        android:id="@+id/tvTanggalPertandinganDetailFavorite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:textColor="#500557"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvVersusDetailFavorite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:paddingRight="10dp"
            android:paddingLeft="10dp"
            android:text="@string/vs"/>

        <TextView
            android:id="@+id/tvScoreHomeDetailFavorite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toLeftOf="@+id/tvVersusDetailFavorite"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:textSize="32sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/imgHomeDetailFavorite"
            android:layout_width="120dp"
            android:layout_height="50dp"
            android:layout_centerVertical="true"
            android:layout_toLeftOf="@+id/tvScoreHomeDetailFavorite" />

        <TextView
            android:id="@+id/tvScoreAwayDetailFavorite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/tvVersusDetailFavorite"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:textSize="32sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/imgAwayDetailFavorite"
            android:layout_width="120dp"
            android:layout_height="50dp"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/tvScoreAwayDetailFavorite" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvScoreHomeDetailFavorite">

        <TextView
            android:id="@+id/tvTeamHomeDetailFavorite"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:gravity="center_horizontal"
            android:text=" "
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tvFormationHomeDetailFavorite"
            android:layout_below="@+id/tvTeamHomeDetailFavorite"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:gravity="center_horizontal"
            android:text=" "
            android:textSize="12sp" />

        <TextView
            android:id="@+id/tvTeamAwayDetailFavorite"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_alignParentRight="true"
            android:text=" "
            android:maxLength="12"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tvFormationAwayDetailFavorite"
            android:layout_below="@+id/tvTeamHomeDetailFavorite"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:gravity="center_horizontal"
            android:text=" "
            android:textSize="12sp" />

    </RelativeLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:background="#38023c"/>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvGoalsFavorite">


        <TextView
            android:id="@+id/tvHomeGoalDetailsFavorite"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:text=""
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tvGoalsFavorite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/goals"
            android:textColor="#500557"/>

        <TextView
            android:id="@+id/tvAwayGoalDetailsFavorite"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:text=""
            android:gravity="right"
            android:textSize="14sp" />

    </RelativeLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvGoalsFavorite"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp">

        <TextView
            android:id="@+id/tvHomeShotsFavorite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:text=""
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tvShotsFavorite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/shots"
            android:textColor="#500557"/>

        <TextView
            android:id="@+id/tvAwayShotsFavorite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:text=""
            android:textSize="14sp" />

    </RelativeLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="1dp"
        android:background="#38023c"/>

    <TextView
        android:id="@+id/tvLineupsFavorite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/lineups"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp">

        <TextView
            android:id="@+id/tvHomeGoalkeeperFavorite"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:text=""
            android:textSize="14sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/goalkeeper"
            android:textColor="#500557"/>

        <TextView
            android:id="@+id/tvAwayGoalkeeperFavorite"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:text=""
            android:gravity="right"
            android:textSize="14sp" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp">

        <TextView
            android:id="@+id/tvHomeDefenseFavorite"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:text=""
            android:textSize="14sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/defense"
            android:textColor="#500557"/>

        <TextView
            android:id="@+id/tvAwayDefenseFavorite"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:text=""
            android:gravity="right"
            android:textSize="14sp" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp">

        <TextView
            android:id="@+id/tvHomeMidfieldFavorite"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:text=""
            android:textSize="14sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/midfield"
            android:textColor="#500557"/>

        <TextView
            android:id="@+id/tvAwayMidfieldFavorite"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:text=""
            android:gravity="right"
            android:textSize="14sp" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp">

        <TextView
            android:id="@+id/tvHomeForwardFavorite"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:text=""
            android:textSize="14sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/forward"
            android:textColor="#500557"/>

        <TextView
            android:id="@+id/tvAwayForwardFavorite"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:text=""
            android:gravity="right"
            android:textSize="14sp" />

    </RelativeLayout>

</LinearLayout>
